--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.3.11"
+    "mongoose": "^5.3.11",
+    "xmlhttprequest": "^1.8.0"
   }
 }
